# Coconut

./: .env  Dockerfile  Readme.md  alembic.ini  docker-compose.yml  preStart.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 0261f902d4b2_initial_migration.py  12f2ef0d2b90_initial_migration.py  9645207eb0bd_.py  b89ae4567dec_initial_migration.py  dc4a55e576ba_.py  e224589e2b4b_.py
app/: alembic.ini  main.py  models.py
app/alembic/: env.py
app/alembic/versions/: 1550c28b9a96_init.py  2782ca0e09ab_init.py  3b8a5c085d20_init.py  dc5427538508_.py
app/api/: deps.py  main.py
app/api/middlewares/: token_authorization.py
app/api/router/: user.py
app/api/routes/: auth.py  user.py
app/connectors/: config.py  db.py
app/core/: config.py  db.py
app/crud/: users.py
app/db/: config.py  db.py
app/models/: users.py
app/schemas/: types.py  users.py
scripts/: db.sh  preStart.sh
