[tool.poetry]
name = "coconut-backend"
version = "0.1.0"
description = "Coconut Backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.11"
alembic = "^1.15.1"
sqlmodel = "^0.0.24"
psycopg2-binary = "^2.9.10"
psycopg = {extras = ["binary"], version = "^3.2.6"}
pydantic-settings = "^2.8.1"
pytest = "^8.3.5"
coverage = "^7.6.12"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.39"
psycopg2 = "^2.9.10"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
